--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Poole-test
+title:            Poole-testt
 tagline:          The Jekyll Butler
 url:              http://getpoole.com
 paginate:         1
