--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gulp": "^3.8.7"
   },
   "devDependencies": {
+    "gulp-connect": "^2.0.6",
     "gulp-livereload": "^2.1.0",
+    "gulp-run": "^1.6.3",
     "gulp-watch": "^0.6.9",
     "tiny-lr": "0.0.9"
   },
