--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "gulp-csso": "^0.2.6",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
-    "gulp-gh-pages": "^0.4.0",
     "gulp-imagemin": "^1.1.0",
     "gulp-jshint": "^1.5.3",
     "gulp-livereload": "^1.2.0",
     "gulp-load-plugins": "^0.5.0",
     "gulp-ruby-sass": "^0.4.3",
     "gulp-size": "^0.3.0",
+    "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^0.2.1",
     "gulp-useref": "^0.4.2",
     "jshint-stylish": "^0.2.0",
