--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "jquery": "~1.11.0",
     "font-awesome": "~4.2.0",
     "fullpage.js": "~2.2.1",
-    "jquery-backstretch": "~2.0.4"
+    "jquery-backstretch": "~2.0.4",
+    "sweetalert": "~0.2.1"
   },
   "devDependencies": {}
 }
