--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "gulp": "^3.6.0",
     "gulp-autoprefixer": "^0.0.7",
     "gulp-cache": "^0.2.2",
-    "del": "^0.1.0",
+    "gulp-clean": "^0.2.4",
     "gulp-csso": "^0.2.6",
-    "gulp-filter": "^0.5.0",
+    "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
     "gulp-gh-pages": "^0.4.0",
-    "gulp-imagemin": "^0.6.0",
+    "gulp-imagemin": "^1.2.0",
     "gulp-jshint": "^1.8.0",
     "gulp-livereload": "^2.1.0",
     "gulp-load-plugins": "^0.5.0",
