--- a/bower.json
+++ b/bower.json
@@ -4,11 +4,10 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.3.0",
     "jquery": "~1.11.0",
-    "font-awesome": "~4.2.0",
+    "font-awesome": "~4.5.0",
     "fullpage.js": "~2.7.0",
     "jquery-backstretch": "~2.0.4",
-    "sweetalert": "~0.4.0",
-    "headroom.js": "~0.7.0"
+    "sweetalert": "~0.4.0"
   },
   "devDependencies": {}
 }
